# OpenPylot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  install.sh  setup.sh  start.sh
.github/workflows/: ci.yml  release-binaries.yml  release-npm.yml  release-python.yml
Formula/: gmv-agent.rb  openpylot.rb  pylot.rb
agents/: README.md  coder.toml  marketer.toml  researcher.toml  writer.toml
config/: default.toml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING-STARTED.md  INSTALLATION.md  PLUGINS.md  PUBLISHING.md  README.md  SECURITY.md  SOCIAL-PLATFORMS.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/knowledge/: page.tsx
frontend/src/app/memory/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/setup/: page.tsx
frontend/src/app/setup/wizard/: page.tsx
frontend/src/app/social/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/components/chat/: agent-message.tsx  chat-input.tsx  chat-page.tsx  markdown-renderer.tsx  message-list.tsx  reconnect-banner.tsx  side-panel.tsx  streaming-message.tsx  tool-call-card.tsx  user-message.tsx
frontend/src/components/layout/: app-shell.tsx  header.tsx  sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  separator.tsx  skeleton.tsx  textarea.tsx  toast.tsx  tooltip.tsx
frontend/src/lib/: api.ts  social-text.ts  utils.ts  websocket.ts
frontend/src/stores/: app.ts  chat.ts  notifications.ts  toast.ts
frontend/src/types/: index.ts
node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
node/js/: cli.js  index.ts
node/npm/darwin-arm64/: README.md  package.json
node/npm/darwin-x64/: README.md  package.json
node/npm/linux-arm64-gnu/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/src/: lib.rs
plan_docs/: 00-MASTER-PLAN.md  01-MEMORY-SYSTEM.md  02-SKILL-SYSTEM.md  03-STREAMING.md  04-SUB-AGENT-SYSTEM.md  05-MCP-SUPPORT.md  06-LEARNING-TRADITIONAL.md  07-PYTHON-SDK.md  08-NODE-SDK.md  09-SOCIAL-MEDIA-AGENT.md  10-RL-LEARNING.md  11-INSTALL-AND-CLI.md  12-WEB-UI-AND-DOCS.md
python/: Cargo.toml  README.md  pyproject.toml
python/python/gmv_agent/: __init__.py  agent.py  cli.py  setup.py
python/python/pylot/: __init__.py  agent.py  cli.py  setup.py
python/src/: lib.rs
scripts/: port_openclaw_skills.py
skills/agentic/multi-step-orchestration/: SKILL.md
skills/coding/code-review/: SKILL.md
skills/coding/coding-agent/: SKILL.md
skills/coding/debug-systematically/: SKILL.md
skills/coding/github/: SKILL.md
skills/coding/nano-pdf/: SKILL.md
skills/coding/openai-image-gen/: SKILL.md
skills/coding/openai-whisper/: SKILL.md
skills/coding/openai-whisper-api/: SKILL.md
skills/coding/skill-creator/: SKILL.md
skills/communication/discord/: SKILL.md
skills/communication/email-drafting/: SKILL.md
skills/communication/imsg/: SKILL.md
skills/communication/slack/: SKILL.md
skills/media/gifgrep/: SKILL.md
skills/media/songsee/: SKILL.md
skills/media/spotify-player/: SKILL.md
skills/media/video-frames/: SKILL.md
skills/productivity/apple-notes/: SKILL.md
skills/productivity/apple-reminders/: SKILL.md
skills/productivity/bear-notes/: SKILL.md
skills/productivity/notion/: SKILL.md
skills/productivity/obsidian/: SKILL.md
skills/productivity/summarize/: SKILL.md
skills/productivity/task-planning/: SKILL.md
skills/productivity/things-mac/: SKILL.md
skills/productivity/trello/: SKILL.md
skills/research/blogwatcher/: SKILL.md
skills/research/goplaces/: SKILL.md
skills/research/research-and-summarize/: SKILL.md
skills/research/weather/: SKILL.md
skills/research/youtube-transcripts/: SKILL.md
skills/research/youtube-transcripts/scripts/: fetch_transcript.py  run.sh
skills/system/healthcheck/: SKILL.md
skills/system/onepassword/: SKILL.md
skills/system/openhue/: SKILL.md
skills/system/tmux/: SKILL.md
src/: agent.rs  config.rs  context.rs  document_chunker.rs  frontend_assets.rs  hooks.rs  init.rs  lib.rs  main.rs  memory.rs  oauth.rs  permissions.rs  scheduler.rs  secrets.rs  sessions.rs  smart_memory.rs  telegram_bot.rs  terminal.rs  traits.rs  usage.rs
src/api/: handlers.rs  mod.rs  ws.rs
src/jobs/: mod.rs  reminders.rs  rsvp_monitor.rs
src/learning/: auto_scorer.rs  error_diagnosis.rs  feedback.rs  mod.rs  prompt_evolution.rs  skill_evolver.rs  types.rs
src/llm/: anthropic.rs  fallback.rs  lazy.rs  mod.rs  openai.rs
src/marketing/: agent.rs  mod.rs  types.rs
src/mcp/: client.rs  mod.rs  registry.rs  transport.rs  types.rs
src/memory_v2/: consolidator.rs  extractor.rs  mod.rs  retriever.rs  store.rs  types.rs
src/skills/: config.rs  loader.rs  matcher.rs  mod.rs  prompt.rs  registry.rs  scanner.rs  status.rs  types.rs  watcher.rs
src/social/: manager.rs  mod.rs  providers.rs  text.rs  types.rs
src/streaming/: mod.rs  types.rs
src/sub_agents/: manifest.rs  mod.rs  orchestrator.rs  store.rs  types.rs
src/tools/: bash.rs  calendar.rs  document_loader.rs  file_ops.rs  gmail.rs  memory_tools.rs  mod.rs  notes.rs  reminder.rs  search.rs  social.rs  spawn_agent.rs  telegram.rs  web.rs  whatsapp.rs
src/webhooks/: server.rs
tests/node/integration/: bindings.test.mjs
tests/node/unit/: config.test.mjs  package.test.mjs
tests/python/integration/: test_integration.py
tests/python/unit/: test_bindings.py  test_config.py
tests/rust/integration/: config_test.rs  reminders_test.rs  rsvp_test.rs  scheduler_test.rs  secrets_test.rs  skills_test.rs
tests/rust/unit/: context_test.rs  llm_test.rs  memory_test.rs  tools_test.rs
