[package]
name = "gmv-agent"
version = "0.1.0"
edition = "2021"
description = "GMV Agent - A Rust-powered personal AI assistant"
license = "MIT"

[[bin]]
name = "gmv-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rustyline = "14"
colored = "2"
toml = "0.8"
dotenvy = "0.15"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
open = "5"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
tempfile = "3"
