[package]
name = "gmv-agent"
version = "0.2.0"
edition = "2021"
description = "GMV Agent - A Rust-powered personal AI assistant"
license = "MIT"
repository = "https://github.com/GMV-AI/gmv-agent"
keywords = ["ai", "assistant", "agent", "personal-assistant"]
categories = ["command-line-utilities"]

[[bin]]
name = "gmv-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rustyline = "14"
colored = "2"
toml = "0.8"
toml_edit = "0.22"
dotenvy = "0.15"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
open = "5"
urlencoding = "2"

# Setup wizard & interactive prompts
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
console = "0.15"

# Secrets vault encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Scheduler
cron = "0.13"

# Webhook server & API server
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Document processing
pdf-extract = "0.7"
docx-rs = "0.4"
calamine = "0.26"
csv = "1.3"
quick-xml = "0.36"
scraper = "0.20"
tempfile = "3.17"

# OCR support for scanned PDFs and images (optional feature)
tesseract = { version = "0.14", optional = true }
image = { version = "0.25", optional = true }

[features]
default = []
ocr = ["tesseract", "image"]

[profile.release]
opt-level = 3
lto = true

# ── Integration tests (moved to tests/rust/integration/) ─────────────

[[test]]
name = "config_test"
path = "tests/rust/integration/config_test.rs"

[[test]]
name = "reminders_test"
path = "tests/rust/integration/reminders_test.rs"

[[test]]
name = "rsvp_test"
path = "tests/rust/integration/rsvp_test.rs"

[[test]]
name = "scheduler_test"
path = "tests/rust/integration/scheduler_test.rs"

[[test]]
name = "secrets_test"
path = "tests/rust/integration/secrets_test.rs"

# ── Rust unit tests ──────────────────────────────────────────────────

[[test]]
name = "unit_context"
path = "tests/rust/unit/context_test.rs"

[[test]]
name = "unit_memory"
path = "tests/rust/unit/memory_test.rs"

[[test]]
name = "unit_tools"
path = "tests/rust/unit/tools_test.rs"

[[test]]
name = "unit_llm"
path = "tests/rust/unit/llm_test.rs"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
