[package]
name = "pylot-node-bindings"
version = "0.3.0"
edition = "2021"
description = "Node.js bindings for OpenPylot — A Rust-powered personal AI assistant"
license = "MIT"
repository = "https://github.com/openpylot/pylot"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "napi6"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Reference the main workspace crate
pylot-core = { path = "..", package = "pylot" }

[build-dependencies]
napi-build = "2"
