[package]
name = "pylot-node-bindings"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for OpenPylot — A Rust-powered personal AI assistant"
license = "Apache-2.0"
repository = "https://github.com/gmvofficial/OpenPylot"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "napi6"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Reference the main workspace crate
pylot-core = { path = "..", package = "openpylot" }

[build-dependencies]
napi-build = "2"
