[package]
name = "pylot-python-bindings"
version = "0.3.0"
edition = "2021"
description = "Python bindings for OpenPylot — A Rust-powered personal AI assistant"
license = "Apache-2.0"
repository = "https://github.com/globalmindventures/OpenPylot"
publish = false

[lib]
name = "pylot"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"

# Reference the main workspace crate (path-based for development)
pylot-core = { path = "..", package = "openpylot" }
