[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openpylot"
version = "0.3.0"
description = "OpenPylot — A Rust-powered personal AI assistant (Python bindings)"
license = "Apache-2.0"
requires-python = ">=3.9"
readme = "README.md"
keywords = ["ai", "assistant", "agent", "personal-assistant", "llm", "pylot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/globalmindventures/OpenPylot"
Repository = "https://github.com/globalmindventures/OpenPylot"

[project.scripts]
pylot = "pylot.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
testpaths = ["../tests/python"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pylot._native"
